[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lab/GenerateList.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 1044.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 733.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 737.0
margin_right = 1471.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1475.0
margin_right = 1695.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Ajouter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1699.0
margin_right = 1920.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Export"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
